--- a/books/getting-started-with-deno/2.md
+++ b/books/getting-started-with-deno/2.md
@@ -3,3 +3,12 @@ title: Basics
 ---
 
 This chapter explains the basics of JavaScript, TypeScript, and Deno runtime.
+
+- Arithmetic operators
+- Variables
+  - let, const, var 
+  - identifiers, reseverd keywords
+- Data types
+- Structures
+- Functions
+- Classes
