--- a/books/getting-started-with-deno/1.md
+++ b/books/getting-started-with-deno/1.md
@@ -5,3 +5,13 @@ title: Introduction
 Deno is an engine of JavaScript. You can do a lot of jobs with Deno such as editing files, making web server, etc.
 
 In this book we explain the basics of Deno and how to use it in practice.
+
+# History of Deno
+
+The history of Deno is very complicated.
+
+# Install Deno
+
+## Windows
+
+## Mac
